# underwriting-dashboard

./: .editorconfig  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  DATABASE_IMPROVEMENTS.md  ERROR_HANDLING_IMPROVEMENTS.md  EXCEL_IMPROVEMENTS.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_IMPROVEMENTS.md  apply_data_fix.py  benchmark_db.py  benchmark_excel.py  check_database.py  check_schema.py  environment.yml  error_handling_example.py  fix_database_path.py  fix_imports.py  fix_indentation.py  fix_settings.py  launch_test.py  main.py  pyproject.toml  requirements.txt  run_dashboard.bat  run_dashboard.py  run_dashboard.sh  run_dashboard_fixed.bat  run_fixed_dashboard.py  run_monitoring.bat  setup.cfg  setup_and_test.py  streamlit_run.py  test_changes.py  test_dashboard_data.py  test_excel_optimizations.py  test_optimizations.py  (+3 more)
.github/: CONTRIBUTING.md
.history/: README_20250506051518.md  README_20250506051523.md  README_20250506051811.md  README_20250506051823.md  README_20250506051827.md  README_20250506051834.md  README_20250506051840.md  README_20250506051848.md  README_20250506051911.md  README_20250506051919.md  README_20250513230423.md  environment_20250506051715.yml  environment_20250506120700.yml  main_20250506045721.py  main_20250506112425.py  main_20250506113823.py  main_20250506114247.py  main_20250506114419.py  main_20250506114428.py  main_20250506114430.py  main_20250506114538.py
.history/.streamlit/: config_20250506143755.toml  config_20250506143807.toml  config_20250506143819.toml  config_20250506152423.toml  (+1 more)
config/: config.py
database/: underwriting_models.db
notebooks/: uw_dashboard_tester_notebook.ipynb
prompt/: Underwriting Dashboard - Prompt.py
src/: __init__.py  setup.py
tests/: conftest.py
(+842 files in other folders)
